@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ClippablePolygon.icc,v 1.1 2000-11-02 16:54:48 gcosmo Exp $
+// $Id: G4ClippablePolygon.icc,v 1.2 2001-04-20 19:11:02 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // --------------------------------------------------------------------
@@ -31,11 +31,11 @@ const G4ThreeVector G4ClippablePolygon::GetNormal() const
 inline
 G4int G4ClippablePolygon::GetNumVertices() const
 {
-   return vertices.entries();
+   return vertices.size();
 }
 
 inline
 G4bool G4ClippablePolygon::Empty() const
 {
-   return vertices.entries()==0;
+   return vertices.size()==0;
 }
