@@ -1,4 +1,4 @@
-$Id: History,v 1.17 2001-04-03 08:28:31 gcosmo Exp $
+$Id: History,v 1.18 2001-04-20 19:11:02 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -17,6 +17,11 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+20-Apr-2001, G.Cosmo (geom-solids-specific-V03-00-02)
+- Migration to STL vector:
+  o In G4ClippablePolygon, migrated G4ThreeVectorList typedef and
+    made private to class.
+    
 03-Apr-2001, D.Williams  (geom-solids-specific-V03-00-01)
 -----------------------
 - G4IntersectingCone.cc: make small adjustment to help with roundoff error
